updated deprecated calls (eg Class.newInstance() -> Class.getDeclaredConstructor().newInstance())